# python-dnsblock

./: .gitignore  HISTORY.rst  LICENSE  README.rst  example_source_file.txt  pyproject.toml  setup.py
dnsblock/: block.py  command.py  config.py  const.py  utils.py
tests/: test_block.py  test_dnsblock.py
